<resources>
    <string name="app_name">Books</string>
    <string name="add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="saved">Saved</string>
    <string name="not_saved">Not Saved</string>
    <string name="saveName">Add</string>
    <string name="author">Author</string>
    <string name="book">Book</string>
    <string name="new_book">Directory</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="updated">Book Updated</string>
    <string name="deleted">Book Deleted</string>
    <string name="description">Description</string>
    <string name="last_updated">Last Updated</string>
</resources>